@@ -18,10 +18,12 @@ package org.apache.lucene.util.packed;
  */
 
 import static org.apache.lucene.util.BitUtil.zigZagEncode;
+import static org.apache.lucene.util.packed.MonotonicBlockPackedReader.expected;
 
 import java.io.IOException;
 
 import org.apache.lucene.store.DataOutput;
+import org.apache.lucene.util.BitUtil;
 
 /**
  * A writer for large monotonically increasing sequences of positive longs.
@@ -29,7 +31,7 @@ import org.apache.lucene.store.DataOutput;
  * The sequence is divided into fixed-size blocks and for each block, values
  * are modeled after a linear function f: x &rarr; A &times; x + B. The block
  * encodes deltas from the expected values computed from this function using as
- * few bits as possible. Each block has an overhead between 6 and 14 bytes.
+ * few bits as possible.
  * <p>
  * Format:
  * <ul>
@@ -38,17 +40,16 @@ import org.apache.lucene.store.DataOutput;
  * <li>Block: &lt;Header, (Ints)&gt;
  * <li>Header: &lt;B, A, BitsPerValue&gt;
  * <li>B: the B from f: x &rarr; A &times; x + B using a
- *     {@link DataOutput#writeVLong(long) variable-length long}
+ *     {@link BitUtil#zigZagEncode(long) zig-zag encoded}
+ *     {@link DataOutput#writeVLong(long) vLong}
  * <li>A: the A from f: x &rarr; A &times; x + B encoded using
  *     {@link Float#floatToIntBits(float)} on
  *     {@link DataOutput#writeInt(int) 4 bytes}
  * <li>BitsPerValue: a {@link DataOutput#writeVInt(int) variable-length int}
  * <li>Ints: if BitsPerValue is <tt>0</tt>, then there is nothing to read and
  *     all values perfectly match the result of the function. Otherwise, these
- *     are the
- *     <a href="https://developers.google.com/protocol-buffers/docs/encoding#types">zigzag-encoded</a>
- *     {@link PackedInts packed} deltas from the expected value (computed from
- *     the function) using exaclty BitsPerValue bits per value
+ *     are the {@link PackedInts packed} deltas from the expected value
+ *     (computed from the function) using exaclty BitsPerValue bits per value.
  * </ul>
  * @see MonotonicBlockPackedReader
  * @lucene.internal
@@ -72,22 +73,29 @@ public final class MonotonicBlockPackedWriter extends AbstractBlockPackedWriter 
   protected void flush() throws IOException {
     assert off > 0;
 
-    // TODO: perform a true linear regression?
-    final long min = values[0];
-    final float avg = off == 1 ? 0f : (float) (values[off - 1] - min) / (off - 1);
-
-    long maxZigZagDelta = 0;
-    for (int i = 0; i < off; ++i) {
-      values[i] = zigZagEncode(values[i] - min - (long) (avg * i));
-      maxZigZagDelta = Math.max(maxZigZagDelta, values[i]);
+    final float avg = off == 1 ? 0f : (float) (values[off - 1] - values[0]) / (off - 1);
+    long min = values[0];
+    // adjust min so that all deltas will be positive
+    for (int i = 1; i < off; ++i) {
+      final long actual = values[i];
+      final long expected = expected(min, avg, i);
+      if (expected > actual) {
+        min -= (expected - actual);
+      }
     }
 
-    out.writeVLong(min);
+    long maxDelta = 0;
+    for (int i = 0; i < off; ++i) {
+      values[i] = values[i] - expected(min, avg, i);
+      maxDelta = Math.max(maxDelta, values[i]);
+    }
+
+    out.writeVLong(zigZagEncode(min));
     out.writeInt(Float.floatToIntBits(avg));
-    if (maxZigZagDelta == 0) {
+    if (maxDelta == 0) {
       out.writeVInt(0);
     } else {
-      final int bitsRequired = PackedInts.bitsRequired(maxZigZagDelta);
+      final int bitsRequired = PackedInts.bitsRequired(maxDelta);
       out.writeVInt(bitsRequired);
       writeValues(bitsRequired);
     }
